# mlkem-c3

./: .gitmodules  Kconfig.projbuild  Makefile  sdkconfig  sdkconfig.old
components/kyber/: CMakeLists.txt  kyber.c
components/mlkem-embedded/: CMakeLists.txt
components/mlkem-native/: CMakeLists.txt  mlkem-native.c
components/mlkem_embedded/: CMakeLists.txt  mlkem_embedded.c
components/mlkem_embedded/random/: randombytes.c
main/: CMakeLists.txt  Kconfig.projbuild  hello_world.c  hello_world_main.c  idf_component.yml  main.c
main/include/: main.h
